[package]
name = "mtsyntax-plus"
version = "0.2.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = ["peg/trace"]

[dependencies]
char-classes = "0.3.1"
getopts-macro = "0.1.2"
peg = "0.8.5"
unicode-ident = "1.0"
